playnext-infra/terraform/main.tf
provider "aws" {
  region = "eu-central-1"
}

data "aws_vpc" "default" {
  default = true
}

resource "aws_security_group" "web_sg" {
  name        = "playnext-terraform-web-sg"
  description = "Allow HTTP and SSH"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["2.208.149.34/32"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "db_sg" {
  name        = "playnext-terraform-db-sg"
  description = "Allow Access from Web Server"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.web_sg.id]
  }
}

resource "aws_db_instance" "default" {
  identifier           = "playnext-db-terraform"
  allocated_storage    = 20
  storage_type         = "gp2"
  engine               = "postgres"
  engine_version       = "17.4"
  instance_class       = "db.t3.micro"
  db_name              = "playnext_db"
  username             = var.db_username
  password             = var.db_password
  parameter_group_name = "default.postgres17"
  skip_final_snapshot  = true
  publicly_accessible  = false
  vpc_security_group_ids = [aws_security_group.db_sg.id]
}

resource "aws_instance" "web" {
  ami           = "ami-02003f9f0fde924ea"
  instance_type = "t2.micro"
  key_name      = "playnext-eb"

  vpc_security_group_ids = [aws_security_group.web_sg.id]

  tags = {
    Name = "PlayNext-App-Terraform"
  }
}

output "web_server_ip" {
  value = aws_instance.web.public_ip
  description = "The public IP of your new server"
}

output "db_endpoint" {
  value = aws_db_instance.default.endpoint
  description = "The address of your database (for env.py)"
}

resource "aws_eip" "web_eip" {
  instance = aws_instance.web.id
  domain   = "vpc"
}

output "elastic_ip" {
  value = aws_eip.web_eip.public_ip
  description = "Elastic IP Address"
}
